--- a/example.html
+++ b/example.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <title>Image Placeholder Example</title>
-    <script type="text/javascript" src="img-placeholder.js"></script>
+    <script type="text/javascript" src="img-placeholder.class.js"></script>
 </head>
 <body>
-    <img placeholder="100x200">
-    <img placeholder="270x129" src="http://www.baidu.com/img/baidu_sylogo1.gif">
+    <img >
+    <img src="300x200">
+    <img src="200x200#AAA#0000FF#custom text goes here">
+    <img src="http://www.baidu.com/img/baidu_sylogo1.gif">
 </body>
 </html>
