introduce canvas to create real image data DataURL for each img tag

--- a/example.html
+++ b/example.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Image Placeholder Example</title>
-    <script type="text/javascript" src="img-placeholder.js"></script>
+    <script type="text/javascript" src="img-placeholder.class.js"></script>
 </head>
 <body>
     <img placeholder="100x200">
+    <img placeholder="200x200" src="">
     <img placeholder="270x129" src="http://www.baidu.com/img/baidu_sylogo1.gif">
 </body>
 </html>
