--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Image Placeholder Example</title>
-    <script type="text/javascript" src="img-placeholder.class.js"></script>
+    <script type="text/javascript" src="img-placeholder.js"></script>
 </head>
 <body>
     <img placeholder="100x200">
